rusty-cdk-macros/tests/fails/log_retention_zero.rs
use rusty_cdk_macros::log_retention;

fn example() {
    let retention = log_retention!(0);
}

fn main() {}