rusty-cdk-macros/tests/fails/log_retention_zero.stderr
error: value should be one of [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1096, 1827, 2192, 2557, 2922, 3288, 3653]
 --> tests/fails/log_retention_zero.rs:4:36
  |
4 |     let retention = log_retention!(0);
  |                                    ^
